# Exeventis

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml  ruff.toml
src/event-source/: aggregate.py  application.py  exceptions.py  reconstructor.py  test.ipynb  transcoders.py
src/event-source/recorders/: PSQL.py  base.py  memory.py
src/exeventis/: abc.py  aggregate.py  application.py  exceptions.py  reconstructor.py  recorder_store.py  test.ipynb  transcoders.py
src/exeventis/recorders/: base.py  memory.py  sqlalchemy.py
tests/: aggregate_test.py  application_test.py  orm_test.py  utils.py
